[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.211765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -125.0
margin_right = 87.0
margin_bottom = 126.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 174.0
margin_bottom = 69.0
text = "Game Paused"
align = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 174.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 40 )
text = "Resume"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 174.0
margin_bottom = 157.0
rect_min_size = Vector2( 0, 40 )
text = "Exit to menu"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 161.0
margin_right = 174.0
margin_bottom = 201.0
rect_min_size = Vector2( 0, 40 )
text = "Exit"
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_ExitToMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
